# BlobStore

./: .clangd  .gitignore  Blob.cbp  Blob.depend  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: Blake3Hasher.cpp.CD94A508A820904D.idx  Blake3Hasher.hpp.CF6B69FA9061299D.idx  BlobStore.cpp.34AF1C597E4DCBB3.idx  BlobStore.cpp.CB756D57298E71D5.idx  BlobStore.h.B4BF9BBEECCE19F2.idx  BlobStore.hpp.672ABA3925A4E89F.idx  BlobTypes.hpp.412DC5A0FF142739.idx  FnvHasher.cpp.41F3F1D7350F3465.idx  FnvHasher.hpp.F56C092E892491BA.idx  FnvHasher.tpp.7B7FC532B9441F6E.idx  HashFactory.cpp.B8C3E7E6345BBDBC.idx  HashFactory.h.61788BA1C9EEC51E.idx  IFuzzyHasher.hpp.41B8ABA57ADB6916.idx  IHasher.h.89385F7D5E99B448.idx  IHasher.hpp.8AC10AC5FEB35A6B.idx  Sha256Hasher.cpp.D8342732885211E2.idx  Sha256Hasher.h.6BC783251633B1C8.idx  Sha256OpenSSLHasher.cpp.83D494EB12AEBA9E.idx  Sha256OpenSSLHasher.hpp.386344D80B7DCF36.idx  blake3.c.E717BC8636831D6B.idx  blake3.h.3EA09AD43A3B0CE2.idx  blake3_dispatch.c.5A6AEAAC2A19C67D.idx  blake3_impl.h.B80528BEF0B6C3F9.idx  blake3_portable.c.8FE6390DF6EF97C3.idx  main.cpp.7951C0A67DC7CF4E.idx  main.cpp.A6257079C8D53C4B.idx
MY_STORE/OBJECTS/DABE3341/F6F1CE27/6958E00A/DC9530C2/44B5CF2B/1F75608A/8973F95F/B8986842/: DATA.BLB  META.TXT
build_refactor/: .ninja_deps  .ninja_log  CMakeCache.txt  blob  build.ninja  cmake_install.cmake  compile_commands.json
include/: BlobStore.h
legacy/: Multiplicative8Hasher.cpp.legacy  Multiplicative8Hasher.hpp.legacy
legacy/old_api/include/: BlobStore.h  Sha256Hasher.h
legacy/old_api/src/: BlobStore.cpp  HashFactory.cpp
legacy/old_include/: HashFactory.h  IHasher.h
legacy/old_similarity/: IFuzzyHasher.hpp.legacy
src/: BlobStore.cpp  HashFactory.cpp  Sha256Hasher.cpp  main.cpp
src/blobstore/: BlobErrors.hpp  BlobFingerprintGenerator.cpp  BlobFingerprintGenerator.hpp  BlobStore.cpp  BlobStore.hpp  BlobTypes.hpp
src/hashing/: Blake3Hasher.cpp  Blake3Hasher.hpp  FibonacciByteHasher.hpp  FibonacciHasher.hpp  FnvHasher.cpp  FnvHasher.hpp  FnvHasher.tpp  FuzzyHasher.hpp  IHasher.hpp  MultiplicativeHasher.hpp  Sha256Hasher.hpp  Sha256OpenSSLHasher.cpp  Sha256OpenSSLHasher.hpp
src/identity_hashing/: Blake3Hasher.cpp  Blake3Hasher.hpp  FibonacciByteHasher.hpp  FibonacciHasher.hpp  FnvHasher.cpp  FnvHasher.hpp  FnvHasher.tpp  IIdentityHasher.hpp  MultiplicativeHasher.hpp  Sha256OpenSSLHasher.cpp  Sha256OpenSSLHasher.hpp
src/meta_hashing/: IFuzzyHasher.hpp  SsdeepHasher.cpp  SsdeepHasher.hpp
src/metahashing/: SsdeepHasher.cpp
src/similarity_hashing/: ISimilarityHasher.hpp  SsdeepHasher.cpp  SsdeepHasher.hpp  TlshHasher.cpp  TlshHasher.hpp
